--- a/config.tex
+++ b/config.tex
@@ -16,8 +16,8 @@
 	\newcommand{\Matheprof}{Hein}
 	\newcommand{\Studiendekan}{Nieselt}
 \else
-	\newcommand{\studBeratung}{Lia Schmid und Paul Fischer}
-	\newcommand{\studBeratungTwolines}{Lia Schmid und \newline Paul Fischer}
+	\newcommand{\studBeratung}{Lia Schmid und Jana Krämer}
+	\newcommand{\studBeratungTwolines}{Lia Schmid und \newline Jana Krämer}
 	\newcommand{\kognimentoren}{Theresa Horn und Fabienne Uehlin}
 	\newcommand{\kognimentorenTwolines}{Theresa Horn und \newline Fabienne Ühlin}
 \fi
