--- a/info/vorlesungszeit/mensen.tex
+++ b/info/vorlesungszeit/mensen.tex
@@ -7,13 +7,14 @@ Mo - Fr~11$^{\underline{30}}$~--~14$^{\underline{00}}$
 
 \bigskip
 
-Mensa Wilhelmstraße:\\
-Mo - Fr~11$^{\underline{15}}$~--~14$^{\underline{00}}$
-
-\nopagebreak
 Prinz Karl:\\
 Mo - Fr~10$^{\underline{00}}$~--~17$^{\underline{00}}$\\
 Essensausgabe: ~11$^{\underline{15}}$~--~17$^{\underline{00}}$
+
+\nopagebreak
+Mensa Wilhelmstraße:\\
+Leider seit dem 26. Juli 2019 im Umbau. \\
+Stadessen wird es ab Mitte September eine Übergangsmensa in der Shedhalle geben.
 
 \end{center}
 
