--- a/kogni/adressen.tex
+++ b/kogni/adressen.tex
@@ -33,7 +33,7 @@ Prof. Andreas Zell          & Kognitive Systeme 		 &\\
 Name                  & Adresse & Tätigkeit \hfill \\
 \hline
 \hline
-Kristina Jendreyko    & Psychol. Institut, Raum 4.432 \newline \email{studienberatung@kogwis.uni-tuebingen.de} & Koordination für Studium und Lehre\\
+Violaine Le Guily\newline Dr. Elisabeth Hein & Schleichstraße 4.  Ebene 2, Zimmer 4240\newline\email{studienberatung@kogwis.uni-tuebingen.de} & Koordination für Studium und Lehre,\newline Studienberatung\\
 \hline
 \studBeratungTwolines & \email{kogni-beratung@fsi.uni-tuebingen.de} & Studentische\newline Studienberatung\\
 \hline
