--- a/kogni/adressen.tex
+++ b/kogni/adressen.tex
@@ -3,7 +3,7 @@
 \textbf{Unsere Professoren:}\\\\
 \footnotesize
 
-\begin{tabular}{|p{0.25\textwidth}p{0.4\textwidth}p{0.25\textwidth}|}
+\begin{tabular}{|p{0.25\textwidth}p{0.45\textwidth}p{0.2\textwidth}|}
 \hline
 Name                          & Arbeitsbereich & Funktionen \\
 \hline
@@ -18,6 +18,9 @@ Prof. Bettina Rolke			& Evolutionäre Kognition	& \\
 Prof. Rolf Ulrich			& Wahrnehmung und Kognition	& \\
 Prof. Felix Wichmann        & Neuronale Informationsverarbeitung	& PA Vorsitzender\\
 Prof. Andreas Zell          & Kognitive Systeme 		 &\\
+Prof. Hendrik Lensch & Computergrafik &\\
+Prof. Thomas Markwig & Mathematik &\\
+Dr. Britta Dorn & Mathematische Strukturen in der Informatik &\\
 \hline
 \end{tabular}
 %\enlargethispage{4ex}
