die ersten Wochen ins Heft

--- a/anfiheft.tex
+++ b/anfiheft.tex
@@ -129,6 +129,9 @@
 
 	\subsection{Die zukünftigen Semester}
 	\input{kogni/erste_woche/zukunft.tex}
+	
+	\subsection{Die ersten Wochen}
+	\input{kogni/erste_woche/die_ersten_wochen.tex}
 \fi 
  
 \pagebreak
