--- a/anfiheft.tex
+++ b/anfiheft.tex
@@ -130,6 +130,8 @@
 	\subsection{Die zukünftigen Semester}
 	\input{kogni/erste_woche/zukunft.tex}
 	
+	\pagebreak
+	
 	\subsection{Die ersten Wochen}
 	\input{kogni/erste_woche/die_ersten_wochen.tex}
 \fi 
